# OpenGL-cpp-Template

./: CMakeLists.txt
src/: main.cpp
